--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,31 +1,37 @@
-<div class="dashboard-container">    
-
-  <!-- Sección de Resumen -->
-  <div class="summary-section">
-    <div class="summary-card">
+<div class="dashboard-container">
+  <!-- Resumen -->
+  <section class="summary-section">
+    <div class="summary-card" (click)="changeAppointmentListSelected('Hoy',todayAppointments)">
       <h3>Consultas del Día</h3>
-      <p>{{ consultasDia }}</p>
+      <p>{{ todayAppointments.length }}</p>
     </div>
-    <div class="summary-card">
-      <h3>Consultas de Mañana</h3>
-      <p>{{ nextAppointments }}</p>
+    <div class="summary-card" (click)="changeAppointmentListSelected('Mañana',tomorrowAppointments)">
+      <h3>Consultas Mañana</h3>
+      <p>{{ tomorrowAppointments.length }}</p>
     </div>
-    <div class="summary-card">
-      <h3>Total Consultas</h3>
-      <p>{{ totalConsultas }}</p>
+    <div class="summary-card" (click)="changeAppointmentListSelected('Restantes',remainingAppointments)">
+      <h3>Consultas Restantes</h3>
+      <p>{{ remainingAppointments.length }}</p>
     </div>
-  </div>
+  </section>
 
   <!-- Botones de acción -->
-  <div class="action-buttons">
-    <button class="btn-primary" routerLink="/agenda">🗓️ Agendar Cita</button>
-    <button class="btn-secondary" routerLink="/patient">➕ Crear Paciente y Agendar</button>
-  </div>
+  <section class="action-buttons">
+    <button class="btn btn-primary" routerLink="/agenda">🗓️ Ir a mi Agenda</button>
+    <button class="btn btn-secondary" routerLink="/patient">➕ Crear Paciente</button>
+  </section>
 
-  <!-- Tabla de Próximas Consultas -->
-  <div class="notifications-container">
-    <div class="notifications-section">
-      <h4>📅 Próximas Consultas</h4>
+  <!-- Próximas Consultas -->
+  <section class="notifications-section">
+    <h4>📅 Consultas de {{title}}</h4>
+  
+    <!-- Mensaje cuando no hay consultas -->
+    <div *ngIf="appointmentSelected.length === 0" class="no-consultas-message">
+      <p>🌟 No hay consultas. ¡Aprovecha para descansar o planificar el día! 🌟</p>
+    </div>
+  
+    <!-- Tabla de consultas -->
+    <div class="table-responsive" *ngIf="appointmentSelected.length > 0">
       <table class="consultas-table">
         <thead>
           <tr>
@@ -35,19 +41,18 @@
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let consulta of proximasConsultas">
-            <td>{{ consulta.paciente }}</td>
-            <td>{{ consulta.fecha | date: 'EEEE, dd/MM/yyyy - HH:mm' }}</td>
-
-            <td>
-              <button class="btn-details">👁️ Ver Detalles</button>
-              <button class="btn-edit">✏️ Editar</button>
-              <button class="btn-delete">🗑️ Cancelar</button>
+          <tr *ngFor="let consulta of appointmentSelected">
+            <td>{{ consulta.patient.person?.firstName }}</td>
+            <td>{{ consulta.appointmentStart | date: 'EEEE, dd/MM/yyyy - HH:mm' }}</td>
+            <td class="action-buttons-table">
+              <button class="btn-small btn-info">👁️ Ver</button>
+              <button class="btn-small btn-warning">✏️ Editar</button>
+              <button class="btn-small btn-danger">🗑️ Cancelar</button>
             </td>
           </tr>
         </tbody>
       </table>
     </div>
-  </div>
-
+  </section>
+  
 </div>
