--- a/src/app/views/welcome/welcome.component.html
+++ b/src/app/views/welcome/welcome.component.html
@@ -11,7 +11,7 @@
     </mat-card-content>
 
     <mat-card-actions>
-      <button mat-raised-button color="primary" routerLink="/dashboard">Ir a mi agenda</button>
+      <button mat-raised-button color="primary" routerLink="/agenda">Ir a mi agenda</button>
     </mat-card-actions>
   </mat-card>
 </div>
